<resources>

    <string name="map_box_access_token">pk.eyJ1Ijoia2FybDQ3OTgiLCJhIjoiY2s2ZzloYWhqMDdvdTNnazZ0cDdoanF0MyJ9.aDljPIv919YSIwsTgbvPGg</string>

    <string name="app_name">One Direction</string>
    <string name="start_navigation">Start navigation</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="registerHeading">Register</string>
    <string name="passwordEd">Password</string>
    <string name="confirm_passwordEd">Confirm Password</string>
    <string name="full_nameEd">Full Name</string>
    <string name="metric_imperial_unitsEd">Metric / Imperial Units</string>
    <string name="registerBtn">Register</string>
    <string name="registerBtn2">Register</string>
    <string name="loginBtn2">Login</string>
    <string name="email_addressEd">Email Address</string>
    <string name="passwordEd3">Password</string>
    <string name="email_addressEd3">Email Address</string>
    <string name="title_activity_main">Main</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_map_view">MapView</string>
    <string name="start_navigationBtn">Start navigation</string>
    <string name="menu">Menu</string>
    <string name="calculating_route">Calculating Route</string>
    <string name="one_direction1">One Direction</string>
    <string name="savebutton">Save</string>
    <string name="full_name_1">Full Name</string>
    <string name="x_btn">X</string>
    <string name="mode_of_transport_1">Mode of Transport</string>
    <string name="preferred_units_of_measure_1">Preferred Units of Measure</string>
    <string name="show_route_1">Show Route</string>
    <string name="phone_number">Enter a Phone Number</string>
    <string name="reset_password">Reset Password</string>
    <string name="remember_me">Remember Me?</string>
    <string name="logging_you_in">We\'re logging you in...</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="transit_method">Transit Method</string>
    <string name="from_origin_address">From: Origin Address</string>
    <string name="to_destination_address">To: Destination Address</string>
    <string name="date_time">Date / Time</string>
    <string name="version">v1.30</string>
    <string name="aboutlink">We Still Love Your Music</string>
    <string name="about">Welcome to One Direction\n\nAn innovative maps application, with an even more innovative name.\n\nThis maps application allows you to easily navigate to locations, through the use of searching for a landmark or address, or dropping a pin on the map.\n\nYour profile is synced with an online database, so you can sign in on any device and obtain access to your profile.\n\nFeatures include, but are not limited to, turn-by-turn navigation, trip history, selecting from a variety of different transport methods, and many more features.</string>
    <string name="delete_history">Delete History</string>
    <string name="delete_account">Delete Account</string>
    <string name="map_theme">Map Theme</string>
    <string name="application_image">Application Image</string>

</resources>
