<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="475dp"
    android:layout_gravity="center"
    android:background="@drawable/modal_layout_light"
    android:orientation="vertical"
    android:padding="5dp"
    android:id="@+id/modal_about">

    <ImageView
        android:id="@+id/ivOne"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/application_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/one_direction_logo" />

    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/about"
        android:textAlignment="center"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivOne" />

    <TextView
        android:id="@+id/tvOneDirectionVideo"
        android:layout_width="0dp"
        android:layout_height="25dp"
        android:text="@string/aboutlink"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAbout" />

    <TextView
        android:id="@+id/closeTxt2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/x_btn"
        android:textColor="@color/pink"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/version"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/ivOne"
        app:layout_constraintStart_toStartOf="@+id/ivOne"
        app:layout_constraintTop_toTopOf="@+id/ivOne" />

</androidx.constraintlayout.widget.ConstraintLayout>